--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/41b668fa3e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container-fluid">
+
+                <!-- NAVBAR -->
+
             <nav id="navbar" class="navbar navbar-light" style="background-color: #e3f2fd;">
                 <div class="container-fluid justify-content-center">
                     <ul class="nav">
                         <li class="nav-item">
-                            <a class="navbar-brand" href="#about">About</a>
+                            <a class="navbar-brand" href="#welcome-section">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-brand" aria-current="page" href="#projects">Projects</a>
+                            <a class="navbar-brand" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="navbar-brand" href="#contact">Contact</a>
@@ -25,27 +30,87 @@
                 </div>
             </nav>
         
-        <div class="container-fluid">
-            <section id="welcome-section" class="welcome-section d-flex justify-content-center">
-                <h1 class="display-1">Welcome Section</h1>
-            </section>
-        </div>
+            <!-- WELCOME SECTION -->
 
         <div class="container-fluid">
-            <section id="projects" class="d-flex justify-content-center">
-                <h1 class="display-1">Projects</h1>
-                <div class="project-tile">
-                    <a href="#">Project 1</a>
+            <section id="welcome-section" class="welcome-section d-flex justify-content-center">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <p>HTML - CSS - JavaScript - Typescript</p>
+                        <h1 class="display-1">Michael Dietz</h1>
+                        <p>Bootstrap - Angular</p>
+                    </div>
                 </div>
             </section>
         </div>
 
-        <div class="container-fluid">
-            <section id="links" class=" d-flex justify-content-center">
-                <h1 class="display-1">Contact</h1>
-                <a href="https://github.com" id="profile-link" target="_blank">GitHub!</a>
+            <!-- PROJECTS SECTION -->
+
+        <div class="container-fluid d-flex justify-content-center">
+            <section id="projects">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="display-1 d-flex justify-content-center">Projects</h1>
+                    </div>
+                </div>
+
+                <div class="row row-cols-2 g-4">
+                    <div class="col d-flex justify-content-center">
+                        <div class="card project-tile">
+                        <a href="#"><img src="images/placeholder.jpg" class="card-img-top" alt="..."></a>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card">
+                        <img src="images/placeholder.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card">
+                        <img src="images/placeholder.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card">
+                        <img src="images/placeholder.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
             </section>
         </div>
+
+            <!-- CONTACT SECTION -->
+
+            <div class="container-fluid d-flex justify-content-center">
+                <section id="contact">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="display-1">Contact</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="https://github.com/mrdietz" id="profile-link" target="_blank"><i class="bi bi-github"></i></a>
+                            <a href="https://www.freecodecamp.org/mrdietz" id="profile-link" target="_blank"><i class="fab fa-free-code-camp"></i></a>
+                            <a href="https://twitter.com/MichaelRyanDev" id="profile-link" target="_blank"><i class="bi bi-twitter"></i></a>
+                            <a href="mailto:mrdietz@gmail.com" id="profile-link" target="_blank"><i class="bi bi-envelope-fill"></i></a>
+                            <a href="tel:+19165213950" id="profile-link"><i class="bi bi-telephone-outbound-fill"></i></a>
+                        </div>
+                    </div>
+                </section>
+            </div>
     
     </div>    
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
