--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>freeCodeCamp Personal Portfolio Project</title>
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <!-- Font Awesome for one measly icon  -->
     <script src="https://kit.fontawesome.com/41b668fa3e.js" crossorigin="anonymous"></script>
+
+    <!-- Local stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -93,26 +101,27 @@
 
             <!-- CONTACT SECTION -->
 
-            <div class="container-fluid d-flex justify-content-center">
-                <section id="contact">
-                    <div class="row">
-                        <div class="col-12">
-                            <h1 class="display-1">Contact</h1>
-                        </div>
+        <section id="contact" class="d-flex align-items-center">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <h1 class="display-1">Contact</h1>
                     </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <a href="https://github.com/mrdietz" id="profile-link" target="_blank"><i class="bi bi-github"></i></a>
-                            <a href="https://www.freecodecamp.org/mrdietz" id="profile-link" target="_blank"><i class="fab fa-free-code-camp"></i></a>
-                            <a href="https://twitter.com/MichaelRyanDev" id="profile-link" target="_blank"><i class="bi bi-twitter"></i></a>
-                            <a href="mailto:mrdietz@gmail.com" id="profile-link" target="_blank"><i class="bi bi-envelope-fill"></i></a>
-                            <a href="tel:+19165213950" id="profile-link"><i class="bi bi-telephone-outbound-fill"></i></a>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center align-items-end">
+                        <a href="https://github.com/mrdietz" id="profile-link" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.freecodecamp.org/mrdietz" id="profile-link" target="_blank"><i class="fab fa-free-code-camp"></i></a>
+                        <a href="https://twitter.com/MichaelRyanDev" id="profile-link" target="_blank"><i class="bi bi-twitter"></i></a>
+                        <a href="mailto:mrdietz@gmail.com" id="profile-link" target="_blank"><i class="bi bi-envelope-fill"></i></a>
+                        <a href="tel:+19165213950" id="profile-link"><i class="bi bi-telephone-outbound-fill"></i></a>
                     </div>
-                </section>
+                </div>
             </div>
-    
-    </div>    
+        </section>
+    </div>
+
+    <!-- Javascript from FCC to test that the page passes the user stories. -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
