Finished product, ready to submit

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col">
                         <p>HTML - CSS - JavaScript - Typescript</p>
                         <h1 class="display-1">Michael Dietz</h1>
-                        <p>Bootstrap - Angular</p>
+                        <p id="libraries">Bootstrap - Angular</p>
                     </div>
                 </div>
             </section>
@@ -64,34 +64,34 @@
 
                 <div class="row row-cols-2 g-4">
                     <div class="col d-flex justify-content-center">
-                        <div class="card project-tile">
-                        <a href="#"><img src="images/placeholder.jpg" class="card-img-top" alt="..."></a>
+                        <div class="card text-dark bg-info project-tile">
+                        <a href="#"><img src="images/google.jpg" class="card-img-top" alt="..."></a>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Cloned Google Homepage</h5>
                         </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="card">
-                        <img src="images/placeholder.jpg" class="card-img-top" alt="...">
+                        <div class="card text-dark bg-info">
+                        <img src="images/paper.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Dev Console Rock/Paper/Scissors</h5>
                         </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="card">
-                        <img src="images/placeholder.jpg" class="card-img-top" alt="...">
+                        <div class="card text-dark bg-info">
+                        <img src="images/roman.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Roman Numeral Converter</h5>
                         </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="card">
-                        <img src="images/placeholder.jpg" class="card-img-top" alt="...">
+                        <div class="card text-dark bg-info">
+                        <img src="images/spatula.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Product/Store Landing Page</h5>
                         </div>
                         </div>
                     </div>
