Add links for projects, design improvements

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
     <div class="container-fluid">
 
                 <!-- NAVBAR -->
-
-            <nav id="navbar" class="navbar navbar-light" style="background-color: #e3f2fd;">
-                <div class="container-fluid justify-content-center">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a class="navbar-brand" href="#welcome-section">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="navbar-brand" href="#projects">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="navbar-brand" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+`
+        <nav id="navbar" class="navbar navbar-light">
+            <div class="container-fluid justify-content-center">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="#welcome-section">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         
             <!-- WELCOME SECTION -->
 
@@ -65,37 +65,45 @@
                 <div class="row row-cols-2 g-4">
                     <div class="col d-flex justify-content-center">
                         <div class="card text-dark bg-info project-tile">
-                        <a href="#"><img src="images/google.jpg" class="card-img-top" alt="..."></a>
-                        <div class="card-body">
-                            <h5 class="card-title">Cloned Google Homepage</h5>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <div class="card text-dark bg-info">
-                        <img src="images/paper.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Dev Console Rock/Paper/Scissors</h5>
-                        </div>
+                            <img src="images/google.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Cloned Google Homepage</h5>
+                                <a href="https://mrdietz.github.io/Odin-google-homepage/" target="_blank" class="card-link">Live</a>
+                                <a href="https://github.com/mrdietz/Odin-google-homepage" target="_blank" class="card-link">Code</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="card text-dark bg-info">
-                        <img src="images/roman.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Roman Numeral Converter</h5>
-                        </div>
+                            <img src="images/paper.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Dev Console Rock/Paper/Scissors</h5>
+                                <a href="https://mrdietz.github.io/Odin-JS-Paper-Rock-Scissors/" target="_blank" class="card-link">Live</a>
+                                <a href="https://github.com/mrdietz/Odin-JS-Paper-Rock-Scissors" target="_blank" class="card-link">Code</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="card text-dark bg-info">
-                        <img src="images/spatula.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Product/Store Landing Page</h5>
-                        </div>
+                            <img src="images/roman.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Roman Numeral Converter</h5>
+                                <a href="https://mrdietz.github.io/michael-dietz-cohort209-roman-numeral-converter/" target="_blank" class="card-link">Live</a>
+                                <a href="https://github.com/mrdietz/michael-dietz-cohort209-roman-numeral-converter" target="_blank" class="card-link">Code</a>
+                            </div>
                         </div>
                     </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card text-dark bg-info">
+                            <img src="images/spatula.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Product/Store Landing Page</h5>
+                                <a href="https://mrdietz.github.io/michael-dietz-cohort209-product-page/" target="_blank" class="card-link">Live</a>
+                                <a href="https://github.com/mrdietz/michael-dietz-cohort209-product-page" target="_blank" class="card-link">Code</a>
+                            </div>
+                        </div>
                     </div>
+                </div>
             </section>
         </div>
 
@@ -121,7 +129,7 @@
         </section>
     </div>
 
-    <!-- Javascript from FCC to test that the page passes the user stories. -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- Javascript from FCC to test that the page passes the user stories.
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 </html>
