Update RPS project with new version

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="card text-dark bg-info">
-                            <img src="images/paper.jpg" class="card-img-top" alt="...">
+                            <img src="images/newRPS.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Dev Console Rock/Paper/Scissors</h5>
-                                <a href="https://mrdietz.github.io/Odin-JS-Paper-Rock-Scissors/" target="_blank" class="card-link">Live</a>
-                                <a href="https://github.com/mrdietz/Odin-JS-Paper-Rock-Scissors" target="_blank" class="card-link">Code</a>
+                                <h5 class="card-title">Rock/Paper/Scissors</h5>
+                                <a href="https://mrdietz.github.io/portfolio-RPS/" target="_blank" class="card-link">Live</a>
+                                <a href="https://github.com/mrdietz/portfolio-RPS" target="_blank" class="card-link">Code</a>
                             </div>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                         <div class="card text-dark bg-info">
                             <img src="images/spatula.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Product/Store Landing Page</h5>
+                                <h5 class="card-title">Store Landing Page</h5>
                                 <a href="https://mrdietz.github.io/michael-dietz-cohort209-product-page/" target="_blank" class="card-link">Live</a>
                                 <a href="https://github.com/mrdietz/michael-dietz-cohort209-product-page" target="_blank" class="card-link">Code</a>
                             </div>
